tests/errors/InterfaceCast.java
/*
  73   addDirectSuperType(getSuperClassDec());
  74   for (Iterator i = getSuperInterfaceDecs().iterator(); i.hasNext(); ) {
  75   InterfaceDec superInterface = (InterfaceDec)i.next();
  76   addDirectSuperType(superInterface);
  77 }
*/

public class InterfaceCast {
  public static void main(String[] args) {

  }
}
class A implements B {}
class B {}
